# PETSim

./: .asetup.save  .gitignore  CMakeLists.txt  README.md  format.sh  sim.cc  vis.mac
digi/: CMakeLists.txt  Makefile  digi.cc
digi/include/: sort.hh
digi/src/: sort.cc
framework/: main.py
framework/configs/: config1.py
framework/scripts/: run_simulation.sh
inc/: construction.hh  detector.hh  event.hh  run.hh
include/: construction.hh  event.hh  run.hh
reco/: Makefile  lor.py  lor_mlem.py  plot.py  plot_better.py  reco  reco.C  reco.cc  reco.py  reco2.py  reco3.py  reco_time  reco_time.cc
sim/: CMakeLists.txt  config.in  sim.cc
sim/include/: simActionInitialization.hh  simDetector.hh  simDetectorConstruction.hh  simEvent.hh  simPhysicsList.hh  simPrimaryGeneratorAction.hh  simRun.hh  simStepping.hh
sim/macros/: decay.mac  decay2.mac  run.mac  scandet.mac  vis.mac
sim/src/: simActionInitialization.cc  simDetector.cc  simDetectorConstruction.cc  simEvent.cc  simPhysicsList.cc  simPrimaryGeneratorAction.cc  simRun.cc  simStepping.cc
sim/test/: test_sim.cc
src/: action.cc  construction.cc  detector.cc  event.cc  run.cc  stepping.cc
